# scry

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  scry.yaml
.claude/agents/: code-simplifier.md  tmplt.md
.github/workflows/: ci.yml
examples/: sonit.yaml
scripts/: g.sh
scry/: cli.py  config.py  manifests.py  pipeline.py
scry/collect/: __init__.py  base.py  polaris.py  registry.py  rss.py  schema.py
scry/diff/: __init__.py  changelog.py  dependencies.py  schema.py  severity.py
scry/inventory/: __init__.py  _utils.py  components.py  dependencies.py  graphql.py  webhooks.py
scry/models/: changes.py  config.py  impact.py  state.py
scry/report/: __init__.py  change_plan.py  impact.py  summary.py
scry/store/: __init__.py  state.py
src/scry/: __init__.py  __main__.py  cli.py  config.py
src/scry/collect/: __init__.py  changelog.py
src/scry/diff/: __init__.py  severity.py
src/scry/inventory/: _utils.py  base.py  dependencies.py  version.py
src/scry/models/: __init__.py  enums.py  results.py  surface.py
src/scry/report/: _format.py  change_plan.py  impact.py
src/scry/store/: state.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py  test_store.py
tests/fixtures/: golden_change_plan.md  golden_impact_report.md  introspection_response.json  registry_response.json  rss_feed.xml  sample_component.tsx  sample_manifest.toml  sample_manifest.yaml  sample_manifest_invalid.yaml  sample_package.json  sample_shopify_app.toml  sample_source.ts  schema_2026_04.graphql  schema_2026_07.graphql
tests/test_collect/: test_changelog.py  test_collectors.py  test_polaris.py  test_registry.py  test_rss.py  test_schema.py
tests/test_diff/: test_changelog.py  test_dependencies.py  test_schema.py  test_severity.py
tests/test_inventory/: test_components.py  test_dependencies.py  test_graphql.py  test_run_all.py  test_version.py  test_webhooks.py
tests/test_report/: test_change_plan.py  test_golden.py  test_impact.py  test_summary.py
