[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry"
version = "0.1.0"
description = "Detect API platform changes affecting your projects."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
    "httpx>=0.28",
    "feedparser>=6.0",
    "certifi",
    "graphql-core>=3.2",
    "firecrawl-py>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
scry = "scry.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
