[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry"
dynamic = ["version"]
description = "Detect API platform changes affecting your projects."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
    "httpx>=0.28",
    "feedparser>=6.0",
    "certifi",
    "graphql-core>=3.2",
    "firecrawl-py>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
scry = "scry.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.390",
]

[tool.hatch.version]
path = "scry/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
