[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry"
dynamic = ["version"]
description = "Detect API platform changes affecting your projects."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [
    { name = "OneDusk", email = "one@dusk-labs.com" },
]
keywords = ["api", "changelog", "graphql", "schema-diff", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
    "httpx>=0.28",
    "feedparser>=6.0",
    "certifi",
    "graphql-core>=3.2",
    "firecrawl-py>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/onedusk/scry"
Issues = "https://github.com/onedusk/scry/issues"

[project.scripts]
scry = "scry.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "pyright>=1.1.390",
]

[tool.hatch.version]
path = "scry/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["scry"]

[tool.coverage.report]
show_missing = true
fail_under = 93
